--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,25 @@ h1{
     display: flex;
     margin: 30px;
 }
+
+body {
+    text-align: center;
+}
+
+#code {
+    width: 100%;
+    float: right;
+    min-height: 250px;
+    overflow: scroll;
+    margin: auto;
+    background: #F4F4F9;
+    outline: none;
+    font-family: Courier, sans-serif;
+    font-size: 14px;
+}
+
+#doc {
+    min-height: 250px;
+    width: 100%;
+    margin: 0;
+}
