--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,11 @@ h1{
     text-align: center;
 }
 .container{
+    max-width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
-}
-.cpu-analize{
-    width: 300px;
-    margin: 0;
-}
-#console{
-    height: auto;
 }
 .var{
     width: auto;
@@ -28,7 +22,7 @@ h1{
     left: 2px;
     bottom: 0;
     margin: 0;
-    font-size: 6pt;
+    font-size: 8pt;
 }
 
 .value{
@@ -39,14 +33,8 @@ h1{
     margin: 0;
 }
 
-#Mem{
-    margin-top: 20px;
-}
-
-
-#btn-runwrite{
-    display: flex;
-    margin: 30px;
+#btncompile, #run, #clear{
+    margin: 20px;
 }
 
 body {
@@ -55,7 +43,6 @@ body {
 
 #code {
     width: 100%;
-    float: right;
     min-height: 250px;
     overflow: scroll;
     margin: auto;
@@ -69,4 +56,13 @@ body {
     min-height: 250px;
     width: 100%;
     margin: 0;
+}
+
+#cpuanalize, #memory{
+    margin-top: 10px;
+}
+
+.fade:not(.show){
+    display:none;
+    overflow-y: hidden;
 }
