--- a/css/style.css
+++ b/css/style.css
@@ -149,26 +149,30 @@ body .row-footer{
 	transition-timing-function: ease;
 	left: 0;
     height: 100%;
-    overflow-y: visible;
+    overflow-y: hidden;
 	z-index: 2;
-}
-#aside-nave label{
-	color: #eee;
 }
 #aside-nav span{
 	visibility: hidden;
 	position: absolute;
 }
+#aside-nav p{
+    font-size: 10pt;
+    margin: 10px;
+    width: 20px;
+    padding: 0 5px;
+}
 #aside-nav a{
 	text-decoration: none;
-	color: #eee;
+    color: #eee;
+    padding: 0;
 }
 #aside-nav a:hover{
 	text-decoration: none;
 	color: #414141;
 }
 #aside-nav li{
-	width: 47.5px;
+	width: 40px;
 	transition: width 0.5s;
 	/* Safari and Chrome*/
 	-webkit-transition: width 0.5s;
